# pydantic1.10.6_debug

./: pyproject.toml  run.sh
src/app/: main.py
src/app/handlers/: document_analysis.py
src/app/models/: stages.py
